2004-06-29  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* shapes/vgafile.*: removed limit of 255 frames in a shape.
	  (Note that this does not remove the limit in ShapeID)

2004-06-27    <jeff@mini.nerble.net>

	* actorio.cc: NPC's get saved/restored on proper map.

2004-06-26    <jeff@mini.nerble.net>

	* Merged in multiple-map support.
	* Merged in use of dexterity and wand charges.
	* Merged in builtin groups in ExultStudio.

2004-06-17  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* mapedit/Makefile.am, ucxt/data/Makefile.am: fixed makefile problems

2004-06-07  Ryan Nunn  <colourles@users.sourceforge.net>
	* msvcstuff/Exult.vcproj: Fixing compiling

2004-05-23 Dominik Reichardt <dominus@users.sourceforge.net>
	* docs/xml/*.xml: updated documentations and FAQ
	* docs/*.html: updated documentations and FAQ
	* docs/ucc.txt: added command line options
	* Readme, FAQ: updated
	* Makefile.studio.mingw: installs necessary files for new games now as well
	
2004-05-22    <jeff@mini.nerble.net>

	* exult.cc: Skip intro if "development" game.
	* gumps/Face_stats.cc (Face_stats): Same for face stats.

2004-05-22  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* gumps/Face_stats.cc: fix crash

2004-05-21  Ryan Nunn  <colourles@users.sourceforge.net>
	* various files: Some minor extremely changes that to compile for 
	  PocketPC
	  
2004-05-10	Darke <darkepaw@users.sf.net>
	* vec.h objs/objiter.h: gcc3.4 'fixes'.

2004-04-27  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* exulticon.h, exult.cc: set a window icon

2004-04-15    <jeff@mini.nerble.net>

	* actors.cc (Npc_actor): Removed code to set initial schedules in
	BG, since it sometimes caused former companions to wander off even
	when you told them to "Wait here".

2004-04-10    <jeff@mini.nerble.net>

	* cheat_screen.cc: Implement 'party' flag in cheat screen.

2004-03-12  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* various: 1.1.11cvs
