@@ -57,9 +57,9 @@ public:
 	virtual void paint();
 	virtual void paint_terrain() {  }
 					// Move to new abs. location.
-	virtual void move(int newtx, int newty, int newlift);
-	void move(Tile_coord t)
-		{ move(t.tx, t.ty, t.tz); }
+	virtual void move(int newtx, int newty, int newlift, int newmap = -1);
+	void move(Tile_coord t, int newmap = -1)
+		{ move(t.tx, t.ty, t.tz, newmap); }
 					// Remove/delete this object.
 	virtual void remove_this(int nodel = 0);
 	virtual Container_game_object *get_owner()
