@@ -1,3 +1,8 @@
+2004-06-29    <jeff@mini.nerble.net>
+
+	* actors.cc: Teleport NPC to schedule if not on current map.
+	* Lots:  move() methods take a 'newmap' parameter.
+
 2004-06-29  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
 	* shapes/vgafile.*: removed limit of 255 frames in a shape.
 	  (Note that this does not remove the limit in ShapeID)
